--- a/_posts/2015-11-18-HDFS note.md
+++ b/_posts/2015-11-18-HDFS note.md
@@ -17,7 +17,9 @@ Master-Slave
 
 HDFS的读取流程
 
-![image](http://)
+![image](https://github.com/chunchill/chunchill.github.io/blob/master/_posts/2015-11-19/hdfs_write.png)
+
+![image](https://github.com/chunchill/chunchill.github.io/blob/master/_posts/2015-11-19/hdfs_read.png)
 
 MapReduce体系结构
 
