--- a/_posts/2015-11-18-HDFS note.md
+++ b/_posts/2015-11-18-HDFS note.md
@@ -17,9 +17,9 @@ Master-Slave
 
 HDFS的读取流程
 
-![image](https://github.com/chunchill/chunchill.github.io/blob/master/_posts/2015-11-19/hdfs_write.png)
+![image](https://github.com/chunchill/chunchill.github.io/blob/master/_posts/2015-11-19/hdfs_write.png?raw=true)
 
-![image](https://github.com/chunchill/chunchill.github.io/blob/master/_posts/2015-11-19/hdfs_read.png)
+![image](https://github.com/chunchill/chunchill.github.io/blob/master/_posts/2015-11-19/hdfs_read.png?raw=true)
 
 MapReduce体系结构
 
