--- a/_posts/2015-11-18-HDFS note.md
+++ b/_posts/2015-11-18-HDFS note.md
@@ -15,7 +15,7 @@ Master-Slave
 * 转移计算比移动数据本身更划算
 * 简单一致性模型
 
-HDFS的读取流程
+HDFS的读取流程：
 
 ![image](https://github.com/chunchill/chunchill.github.io/blob/master/_posts/2015-11-19/hdfs_write.png?raw=true)
 
